Fix links in manifest

--- a/custom_components/nature_remo/manifest.json
+++ b/custom_components/nature_remo/manifest.json
@@ -7,9 +7,9 @@
   ],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/doenau/hass-nature-remo",
+  "documentation": "https://github.com/doenau/nature-remo",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/doenau/hass-nature-remo/issues",
+  "issue_tracker": "https://github.com/doenau/nature-remo/issues",
   "requirements": ["aiofiles>=23.2.1"],
   "version": "0.0.6"
 }
